# docs/openapi.json
@@ -4307,6 +4307,42 @@
         }
       }
     },
+    "/api/talent-pool/{id}/reach-out": {
+      "post": {
+        "summary": "POST /api/talent-pool/:id/reach-out",
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "201": {
+            "description": "Created"
+          },
+          "204": {
+            "description": "No Content"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "403": {
+            "description": "Forbidden"
+          },
+          "404": {
+            "description": "Not Found"
+          },
+          "422": {
+            "description": "Validation Error"
+          }
+        }
+      }
+    },
     "/api/talent-pool/{id}/release": {
       "post": {
         "summary": "POST /api/talent-pool/:id/release",
